[metadata]
name = conductor
summary = The Conductor is orchestration engine server
version = 2013.1
description-file =
    README.rst
license = Apache License, Version 2.0
author = Mirantis, Inc.
author-email = murano-all@lists.openstack.org
home-page = htts://launchpad.net/murano
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    conductor

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    conductor = conductor.cmd.run:main

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build = 
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = conductor/locale
domain = conductor

[update_catalog]
domain = conductor
output_dir = conductor/locale
input_file = conductor/locale/conductor.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = conductor/locale/conductor.pot

[nosetests]
# NOTE(jkoelker) To run the test suite under nose install the following
#                coverage http://pypi.python.org/pypi/coverage
#                tissue http://pypi.python.org/pypi/tissue (pep8 checker)
#                openstack-nose https://github.com/jkoelker/openstack-nose
verbosity=2
cover-package = conductor
cover-html = true
cover-erase = true